--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -37,7 +37,7 @@ h1 {
 
 h2 {
   text-align: center;
-  font-size: 1.3em;
+  font-size: 1.8em;
   font-weight: normal; }
 
 h3 {
@@ -169,7 +169,7 @@ button, .button {
       width: 75%;
       height: 80%;
       margin: 0 auto;
-      margin-top: 5%; }
+      margin-top: 6%; }
       #container #content .block_content .block {
         width: 40%;
         height: 80%;
@@ -188,6 +188,15 @@ button, .button {
           width: 55%; }
           #container #content .block_content.big_content .block_video iframe {
             width: 100%; }
+          #container #content .block_content.big_content .block_video .btn_nav_video {
+            width: 50px;
+            height: 50px;
+            display: block;
+            background-size: 50px 50px; }
+            #container #content .block_content.big_content .block_video .btn_nav_video#btn_next_video {
+              background-image: url(../img/icon_arrow_right.png); }
+            #container #content .block_content.big_content .block_video .btn_nav_video#btn_prev_video {
+              background-image: url(../img/icon_arrow_left.png); }
           #container #content .block_content.big_content .block_video #bottom_video {
             width: 100%; }
             #container #content .block_content.big_content .block_video #bottom_video .tab {
@@ -205,10 +214,17 @@ button, .button {
               display: none; }
               #container #content .block_content.big_content .block_video #bottom_video .content_tabs .content_tab.active {
                 display: block; }
-        #container #content .block_content.big_content .block_notes {
+        #container #content .block_content.big_content #block_right_videopage {
           width: 42%; }
-          #container #content .block_content.big_content .block_notes #VideoTextarea_tbl {
+          #container #content .block_content.big_content #block_right_videopage .block_videopage {
+            display: none; }
+            #container #content .block_content.big_content #block_right_videopage .block_videopage.active {
+              display: block; }
+          #container #content .block_content.big_content #block_right_videopage #block_notes #VideoTextarea_tbl {
             width: 100% !important; }
+        #container #content .block_content.big_content #buttons_video_page .button {
+          width: 60%;
+          margin: 10px auto; }
 
 #content_home {
   width: 250px;
@@ -240,73 +256,95 @@ button, .button {
   background-color: #FFF;
   float: left;
   position: relative; }
-  #header #close_menu {
-    z-index: 99;
-    position: absolute;
-    display: block;
-    background-color: #FFF;
-    width: 30px;
-    height: 20px;
-    right: -20px;
-    top: 10px;
-    cursor: pointer; }
-    #header #close_menu:hover {
-      right: -22px; }
   #header #menu {
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     font-family: 'adam', Arial, sans-serif;
     color: #000; }
-    #header #menu li {
-      cursor: pointer;
-      display: inline-block;
-      width: 100%;
-      text-align: center;
-      height: 60px;
-      line-height: 30px;
-      margin: 10% 0; }
-      #header #menu li a {
-        color: #000;
-        height: 100%;
+    #header #menu ul {
+      height: 100%;
+      display: block; }
+      #header #menu ul li {
+        cursor: pointer;
+        display: inline-block;
         width: 100%;
-        display: inline-block; }
-        #header #menu li a p {
-          margin: 5px 0; }
-      #header #menu li:first-child {
-        height: 130px; }
-      #header #menu li#menu-item-lessons #menu_lessons {
-        z-index: 99;
-        display: none;
-        position: absolute;
-        right: -250px;
-        width: 250px;
-        background-color: #FFF;
-        margin-top: -75px; }
-        #header #menu li#menu-item-lessons #menu_lessons li {
-          cursor: pointer;
-          height: 30px;
-          line-height: 30px;
-          padding: 0;
-          border-bottom: 1px solid #DEDEDE;
-          margin: 5px 0; }
-          #header #menu li#menu-item-lessons #menu_lessons li .lessons-menu {
-            display: none;
-            position: absolute;
-            right: -300px;
-            background-color: #FFF;
-            width: 300px;
-            margin-top: -35px; }
-          #header #menu li#menu-item-lessons #menu_lessons li:last-child {
-            border: 0; }
-      #header #menu li#menu-item-lessons:hover #menu_lessons {
-        display: block; }
-      #header #menu li#menu-item-close {
-        border-top: 2px solid #000;
-        width: 25%;
-        margin: 0 auto;
-        display: block;
-        margin-top: 30px;
-        padding-top: 20px; }
+        text-align: center;
+        height: 5.5%;
+        margin: 17% 0; }
+        #header #menu ul li a {
+          color: #000;
+          height: 100%;
+          display: inline-block; }
+          #header #menu ul li a .icon {
+            display: block;
+            height: 90%;
+            background-size: auto 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+            margin: 0 auto; }
+          #header #menu ul li a p {
+            margin: 5px 0; }
+        #header #menu ul li:first-child {
+          height: 10%;
+          margin-top: 10%; }
+          #header #menu ul li:first-child img {
+            height: 100%; }
+        #header #menu ul li#menu-item-lessons a .icon {
+          background-image: url(../img/icon_lessons.png); }
+        #header #menu ul li#menu-item-lessons #menu_lessons {
+          z-index: 99;
+          display: none;
+          position: absolute;
+          right: -250px;
+          width: 250px;
+          background-color: #FFF;
+          margin-top: -75px; }
+          #header #menu ul li#menu-item-lessons #menu_lessons li {
+            cursor: pointer;
+            height: 30px;
+            line-height: 30px;
+            padding: 0;
+            border-bottom: 1px solid #DEDEDE;
+            margin: 5px 0; }
+            #header #menu ul li#menu-item-lessons #menu_lessons li .lessons-menu {
+              display: none;
+              position: absolute;
+              right: -300px;
+              background-color: #FFF;
+              width: 300px;
+              margin-top: -35px; }
+            #header #menu ul li#menu-item-lessons #menu_lessons li:last-child {
+              border: 0; }
+        #header #menu ul li#menu-item-lessons:hover #menu_lessons {
+          display: block; }
+        #header #menu ul li#menu-item-help a .icon {
+          background-image: url(../img/icon_help.png); }
+        #header #menu ul li#menu-item-help:hover a .icon, #header #menu ul li#menu-item-help.active a .icon {
+          background-image: url(../img/icon_help_hover.png); }
+        #header #menu ul li#menu-item-friends a .icon {
+          background-image: url(../img/icon_friends.png); }
+        #header #menu ul li#menu-item-friends:hover a .icon, #header #menu ul li#menu-item-friends.active a .icon {
+          background-image: url(../img/icon_friends_hover.png); }
+        #header #menu ul li#menu-item-about a .icon {
+          background-image: url(../img/icon_about.png); }
+        #header #menu ul li#menu-item-about:hover a .icon, #header #menu ul li#menu-item-about.active a .icon {
+          background-image: url(../img/icon_about_hover.png); }
+        #header #menu ul li#menu-item-imprint a .icon {
+          background-image: url(../img/icon_imprint.png); }
+        #header #menu ul li#menu-item-imprint:hover a .icon, #header #menu ul li#menu-item-imprint.active a .icon {
+          background-image: url(../img/icon_imprint_hover.png); }
+        #header #menu ul li#menu-item-contact a .icon {
+          background-image: url(../img/icon_contact.png); }
+        #header #menu ul li#menu-item-contact:hover a .icon, #header #menu ul li#menu-item-contact.active a .icon {
+          background-image: url(../img/icon_contact_hover.png); }
+        #header #menu ul li#menu-item-close {
+          border-top: 2px solid #000;
+          width: 25%;
+          margin: 0 auto;
+          display: block;
+          margin-top: 10%;
+          padding-top: 10%; }
 
 #user_block {
   z-index: 99;
@@ -377,20 +415,53 @@ button, .button {
     display: block; }
 
 .item_nav_video {
-  display: inline-block;
-  background: #D8D8D8;
+  display: block;
+  background: #489fd8;
   width: 30px;
   height: 30px;
   text-align: center;
-  position: relative; }
+  position: relative;
+  float: left; }
+  .item_nav_video .title_video {
+    display: none;
+    position: absolute;
+    top: -23px;
+    left: 50%;
+    width: 100%; }
   .item_nav_video.active {
-    background: #A5A5A5; }
+    background: #3886c7; }
+    .item_nav_video.active .title_video {
+      display: block; }
+    .item_nav_video.active::after {
+      content: '';
+      background-image: url(../img/icon_arrow_down.png);
+      width: 20px;
+      height: 20px;
+      display: block;
+      position: absolute;
+      right: -10px;
+      top: 0;
+      z-index: 10; }
   .item_nav_video a {
     color: #FFF;
     width: 100%;
     height: 100%;
-    display: block;
+    display: none;
     line-height: 30px; }
+  .item_nav_video:hover a {
+    display: block; }
+  .item_nav_video:hover .title_video {
+    display: block; }
+  .item_nav_video:hover::after {
+    content: '';
+    background-image: url(../img/icon_arrow_down.png);
+    width: 20px;
+    height: 20px;
+    display: block;
+    position: absolute;
+    right: -10px;
+    top: 0;
+    z-index: 10; }
 
 .bloc_notes {
   width: 100%;
@@ -432,3 +503,21 @@ button, .button {
       display: inline-block; }
     #block_help #block_sendHelp form input#description_helper, #block_help #block_sendHelp form button#description_helper {
       height: 50px; }
+
+#wrapper_about {
+  width: 90%;
+  margin: 20px auto 0 auto; }
+  #wrapper_about h2 {
+    margin: 0; }
+  #wrapper_about h3 {
+    font-style: italic;
+    color: #444444;
+    text-align: center;
+    margin: 0 0 50px 0; }
+  #wrapper_about .button {
+    width: 30%;
+    margin: 50px auto 0 auto; }
+
+#wrapper_imprint {
+  width: 90%;
+  margin: 20px auto 0 auto; }
